--- a/package.json
+++ b/package.json
@@ -29,12 +29,15 @@
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^8.2.1",
     "express-validator": "^7.3.1",
+    "fs": "^0.0.1-security",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.3",
     "multer": "^2.0.2",
     "nodemailer": "^6.9.8",
     "nodemon": "^3.1.10",
+    "openai": "^6.15.0",
+    "pdf-parse": "^1.1.1",
     "react-toastify": "^11.0.5",
     "socket.io": "^4.7.4",
     "stripe": "^20.0.0",
