--- a/package.json
+++ b/package.json
@@ -33,8 +33,9 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.3",
     "multer": "^2.0.2",
-    "nodemailer": "^6.9.8",
+    "nodemailer": "^7.0.12",
     "nodemon": "^3.1.10",
+    "openai": "^6.15.0",
     "react-toastify": "^11.0.5",
     "socket.io": "^4.7.4",
     "stripe": "^20.0.0",
