--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.3",
     "multer": "^2.0.2",
+    "node-cron": "^4.2.1",
     "nodemailer": "^6.9.8",
     "nodemon": "^3.1.10",
     "openai": "^6.15.0",
